Bug 253477 - Closing the "Write new email" window should not ask if nothing was entered
Summary: Closing the "Write new email" window should not ask if nothing was entered
Status: CLOSED FIXED
Alias: None
Product: KMail Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Maemo 5 Linux
: LO minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-07 08:26 UTC by Rolf Eike Beer
Modified: 2010-10-22 12:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rolf Eike Beer 2010-10-07 08:26:49 UTC
Version:           unspecified (using Devel) 
OS:                Linux

The "Write new email" window asks if the mail should be stored in drafts even if nothing was entered.

Reproducible: Always

Steps to Reproduce:
1. start "Write new email"
2. go to the window view (however this is properly called. just click on the blue icon in the top left)
3. close the "Write new email" window by clicking the X of it
4. it asks if mail should be stored in drafts
Comment 1 Volker Krause 2010-10-14 11:43:28 UTC
SVN commit 1185814 by vkrause:

Don't ask whether to discard or save a message as draft if nothing has
been modified.

BUG: 253477


 M  +2 -0      composerview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1185814
Comment 2 Felix Wolfsteller 2010-10-22 12:34:44 UTC
If nothing entered, no question comes up when closing, version 4:4.6~20101022.1188351-1maemo1.1187374.