Don't ask whether to discard or save a message as draft if nothing has been modified.

BUG: 253477

svn path=/trunk/KDE/kdepim/mobile/; revision=1185814